--- a/ComplexDataStructuresTest/ComplexDataStructuresTest.csproj
+++ b/ComplexDataStructuresTest/ComplexDataStructuresTest.csproj
@@ -54,6 +54,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ComplexDataStructures\ComplexDataStructures.csproj">
+      <Project>{4EAAD862-E291-4FFC-8F8E-DAF753C05CA2}</Project>
+      <Name>ComplexDataStructures</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
