--- a/ComplexDataStructures/ComplexDataStructures.csproj
+++ b/ComplexDataStructures/ComplexDataStructures.csproj
@@ -44,6 +44,7 @@
     <Compile Include="MaxHeap.cs" />
     <Compile Include="MinHeap.cs" />
     <Compile Include="Point.cs" />
+    <Compile Include="PriorityQueue.cs" />
     <Compile Include="Queue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomizedCollection.cs" />
