--- a/Sorting/Sorting.csproj
+++ b/Sorting/Sorting.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="MergeSortHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuickSorter.cs" />
     <Compile Include="SinglyLinkedListNode.cs" />
   </ItemGroup>
   <ItemGroup>
